# Tps_ML_Workshop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_macos.txt  train_config.yaml
framework/: train.py
ml_utils/: data.py  model.py  viz.py
